--- a/css/styles.css
+++ b/css/styles.css
@@ -118,16 +118,37 @@ font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--colour-contacts);
+display: flex;
+justify-content: center;
+align-items: center;
 }
 
 .header-contact:hover,
-.header-contact:focus {color:var(--accent-colour);}
+.header-contact:focus {
+    fill: var(--accent-colour);
+    color:var(--accent-colour);}
+
+
+
+.phone_svg {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+}
+
+.mail_svg {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+}
 
 /* --------------------------- /HEADER */
 
 /* --------------------------- HERO  */
 .hero {
-    background-color: #2F303A;
+    background-color:  #C4C4C4;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero_bg/bg-min.jpg);
+    background-size: cover;
     padding-top: 200px;
     padding-bottom: 200px;
 }
@@ -161,6 +182,7 @@ letter-spacing: 0.06em;
 cursor: pointer;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+border-width: 0px;
 }
 /* --------------------------- /HERO */
 
@@ -171,6 +193,7 @@ display: flex;
 flex-wrap: wrap;
 margin-left: -30px;
 margin-top: -30px;
+
 }
 
 .advantages-card {
@@ -207,6 +230,18 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--colour-contacts);
 }
+
+
+.advantages-icon-item 
+{display: flex; 
+justify-content: center;
+align-items: center;
+width: 270px;
+height: 120px;
+background: #F5F4FA;
+border-radius: 4px;
+margin-bottom: 30px;}
+
 /* --------------------------- /ADVANTAGES  */
 
 /* --------------------------- ABOUT US  */
@@ -266,14 +301,82 @@ font-size: 16px;
 line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
-color:var(--colour-contacts);}
+color:var(--colour-contacts);
+margin-bottom: 16px;}
 
 .team-employees-wrap {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
+.social-list {
+    display: flex;
+    justify-content: center;
+}
+
+.social-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: transparent;
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+    background-color: var(--accent-colour);
+}
+
+.social-list-link:hover .social-list-icon,
+.social-list-link:focus .social-list-icon {
+    fill: #FFFFFF;
+}
+
+.social-list-icon {fill:#AFB1B8}
+
+.social-list-item:not(:last-child) {
+    margin-right: 10px;
+}
+
 /* --------------------------- /OUR TEAM  */
+
+/* --------------------------- REGULAR CLIENT */
+
+.regular-client-list {
+display: flex;
+}
+
+.regular-client-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.regular-client-link {
+border: 1px solid #AFB1B8;
+border-radius: 4px;
+width: 170px;
+height: 92px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.regular-client-icon {
+fill:#AFB1B8;
+}
+
+.regular-client-link:hover .regular-client-icon,
+.regular-client-link:focus .regular-client-icon {
+    fill: var(--accent-colour);
+}
+
+.regular-client-link:hover,
+.regular-client-link:focus {
+    border-color:var(--accent-colour);
+}
+/* --------------------------- /REGULAR CLIENT */
+
 
 /* -------------------- FILTER BTNS  */
 
@@ -302,6 +405,11 @@ font-size: 16px;
 line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
+border-radius: 4px;
+}
+
+.works-item:hover {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .works-links:hover,
@@ -319,7 +427,6 @@ cursor:pointer;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
-
 }
 
 .work-img {
@@ -329,8 +436,17 @@ cursor:pointer;
     margin-top: 30px;
 }
 
+.work-img-link {
+    display: block;
+}
+
+.work-img-link:hover,
+.work-img-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .work-name {
-color: var(--colour-main)1;
+color: var(--colour-main);
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
@@ -355,8 +471,8 @@ color: var(--colour-contacts);}
 /* --------------------------- FOOTER  */
 
 .footer {background-color: #2F303A;
-padding-top: 60px;
-padding-bottom: 60px;}
+
+}
 
 .footer-address {
 font-style: normal;
@@ -376,6 +492,50 @@ color: rgba(255, 255, 255, 0.6);
 
 .footer-info {margin-top: 20px;}
 
+.footer-size {
+     display: flex;
+}
+.footer-left-side {margin-right: 70px;
+    padding-top: 60px;
+    padding-bottom: 60px;}
+
+.fotter-right-side {
+    padding-top: 72px;
+    padding-bottom: 100px;
+   }
+.fotter-list {display: flex;
+    justify-content: center;}
+
+.fotter-social-item:not(:last-child) 
+{margin-right: 10px;}
+
+
+.footer-social-list-link {display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+     } 
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+    background-color: var(--accent-colour);
+}
+
+.fotter-social-list-icon {
+    fill: #FFFFFF;
+    }
+     
+.fotter-right-side-p {
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+margin-bottom: 20px;
+}
 
 /* --------------------------- /FOOTER  */
 
