--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ img {display: block;
 
 /* --------------------------- HEADER */
 .page-header {
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .page-header-container {
@@ -78,7 +78,7 @@ display: flex;
 .contacts {
  display: flex;  margin-left: auto; }
 
-.mail {margin-right:50px;}
+.mail-link {margin-right:50px;}
 
 
 .logo {
@@ -121,14 +121,8 @@ color: var(--colour-contacts);
 display: flex;
 justify-content: center;
 align-items: center;
+fill: var(--colour-contacts);
 }
-
-.header-contact:hover,
-.header-contact:focus {
-    fill: var(--accent-colour);
-    color:var(--accent-colour);}
-
-
 
 .phone_svg {
     width: 10px;
@@ -142,6 +136,11 @@ align-items: center;
     margin-right: 10px;
 }
 
+.header-contact:hover,
+.header-contact:focus {
+    fill: var(--accent-colour);
+    color:var(--accent-colour);}
+
 /* --------------------------- /HEADER */
 
 /* --------------------------- HERO  */
@@ -151,6 +150,11 @@ align-items: center;
     background-size: cover;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
 }
  
 .hero-container {
@@ -395,11 +399,14 @@ font-size: 16px;
 line-height: 1.62;
 text-align: center;
 letter-spacing: 0.03em;
-color:var(--colour-main);    
+color:var(--colour-main);
+background: #F5F4FA;
+border-radius: 4px;   
+border: 0px;
+padding: 6px 22px;
 }
 
 .works-item {
-background: #F5F4FA;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.62;
@@ -408,14 +415,14 @@ letter-spacing: 0.03em;
 border-radius: 4px;
 }
 
-.works-item:hover {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.works-links:hover,
-.works-links:focus {background:var(--accent-colour);
+.works-links:hover, 
+.works-links:focus 
+{background:var(--accent-colour);
 color: white;
 cursor:pointer;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+outline: 0px;
 }
 
 /* -------------------- /FILTER BTNS */
@@ -471,7 +478,8 @@ color: var(--colour-contacts);}
 /* --------------------------- FOOTER  */
 
 .footer {background-color: #2F303A;
-
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-address {
@@ -493,15 +501,14 @@ color: rgba(255, 255, 255, 0.6);
 .footer-info {margin-top: 20px;}
 
 .footer-size {
-     display: flex;
+    display: flex;
+    align-items: baseline;
 }
 .footer-left-side {margin-right: 70px;
-    padding-top: 60px;
-    padding-bottom: 60px;}
+    }
 
 .fotter-right-side {
-    padding-top: 72px;
-    padding-bottom: 100px;
+    
    }
 .fotter-list {display: flex;
     justify-content: center;}
